--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body>
+    <main>
     <section class="card">
       <div class="card-contents">
         <h1 class="card-heading">
@@ -48,5 +49,6 @@
         <img src="images/image-header-desktop.jpg" alt="workplace-img" />
       </div>
     </section>
+      </main>
   </body>
 </html>
